--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 <div class="col-lg-7">
                     <h1 class="display-3 fw-bold mb-4">
                         Professzionális<br>
-                        <span style="color: #ff8f00;">Adatbázis Megoldások</span>
+                        <span style="color: #ffffffdf;">Adatbázis Megoldások</span>
                     </h1>
                     <p class="lead mb-5 fs-4">
                         Építs hatékony, skálázható adatbázis rendszereket a legmodernebb technológiákkal. 
