--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
                 </div>
                 <div class="col-lg-5 text-center">
                     <div class="position-relative">
-                        <i class="fas fa-database" style="font-size: 12rem; color: rgba(0,0,0,0.1);"></i>
+                        <i class="fas fa-database" style="font-size: 12rem; color: rgba(0, 0, 0, 0.1);"></i>
                         <div class="position-absolute top-50 start-50 translate-middle">
-                            <i class="fas fa-chart-line" style="font-size: 4rem; color: #ff8f00;"></i>
+                            <i class="fas fa-chart-line" style="font-size: 4rem; color: #ffc400;"></i>
                         </div>
                     </div>
                 </div>
